syntax = "proto3";

package dropboxsync;

message SyncConfig {
  string key = 1;
  string origin = 2;
  string destination = 3;
}

message Config {
  string core_key = 1; // NOT NEEDED
  repeated SyncConfig sync_configs = 2;
}

message AddSyncConfigRequest{
  SyncConfig to_add = 1;
}

message AddSyncConfigResponse{}

service DropboxSyncService {
  rpc AddSyncConfig(AddSyncConfigRequest) returns (AddSyncConfigResponse) {};
}